Bug 69731 - SIGSEGV in wl_event_source_remove()
Summary: SIGSEGV in wl_event_source_remove()
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-23 19:33 UTC by U. Artie Eoff
Modified: 2013-10-08 14:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb backtrace (2.39 KB, text/plain)
2013-09-23 19:33 UTC, U. Artie Eoff
Details
weston log (6.20 KB, text/plain)
2013-09-23 19:34 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-09-23 19:33:47 UTC
Created attachment 86415 [details]
gdb backtrace

Weston segfaults in wl_event_source_remove() when executed via an SSH session and terminated (ctrl-c)... see attached gdb backtrace.  It also spews out some erroneous messages in the log (see attached weston log).

Steps:
1. Via SSH, execute `weston`
2. From SSH, <ctrl>-c weston
3. Observe weston SIGSEGV

wayland (HEAD) 1.2.91-0-g4125367
drm (HEAD) libdrm-2.4.46-0-gc6d73cf
mesa (9.2) heads/9.2-0-g2cda3f0
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.0-0-g6898ab7
weston (HEAD) 1.2.91-0-g7799385
Comment 1 U. Artie Eoff 2013-09-23 19:34:08 UTC
Created attachment 86416 [details]
weston log
Comment 2 U. Artie Eoff 2013-09-23 19:49:47 UTC
This also happens in the Weston "module" check tests when running on drm.
Comment 3 U. Artie Eoff 2013-09-23 19:51:14 UTC
(In reply to comment #2)
> This also happens in the Weston "module" check tests when running on drm.

That is, from SSH:
$ cd weston/tests
$ ../src/weston --backend=drm-backend.so --modules=`pwd`/.libs/surface-global-test.so
$ ../src/weston --backend=drm-backend.so --modules=`pwd`/.libs/surface-test.so
Comment 4 Kristian Høgsberg 2013-10-02 18:53:11 UTC
Fixed in

commit 6ff3ff57aa76aa8738383cbacc4e9f425e1da056
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 2 10:53:33 2013 -0700

    launcher: Add back support for specifying VT to run on
    
    This is only available when running weston directly as root typically for
    ssh logins.  It's a somewhat destructive option, as it will take over any
    existing VT completely, unless there's already an display server running
    there.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=69731

The underlying issue is that when logging in from ssh, there is not default VT to use for weston.  To run from a root ssh login you have to pick a VT to run on and pass the --tty option to weston.  To run on VT1 pass

 $ weston --tty=1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.