src/launcher-util.h
@@ -30,7 +30,7 @@
 struct weston_launcher;
 
 struct weston_launcher *
-weston_launcher_connect(struct weston_compositor *compositor);
+weston_launcher_connect(struct weston_compositor *compositor, int tty);
 
 void
 weston_launcher_destroy(struct weston_launcher *launcher);
